<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="20dp"
    app:cardCornerRadius="24dp"
    app:strokeColor="?android:textColorHighlight"
    app:strokeWidth="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sen_extrabold"
            android:text="@string/rules_for_excel_import"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mcq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/sen_regular"
            android:text="@string/MCQ"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mcq"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sen_regular"
            android:text="@string/trueflase"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/button"
            android:layout_width="170dp"
            android:layout_height="54dp"
            android:layout_below="@+id/tru"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@color/button_blue">

        </RelativeLayout>


    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>