<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_centerInParent="true"
    android:layout_margin="20dp"
    app:cardCornerRadius="24dp"
    app:strokeColor="@color/black"
    app:strokeWidth="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/lost_emoji"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/lost_emoji" />

        <ImageView
            android:id="@+id/won_emoji"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/won_emoji"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lost_emoji"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/sen_regular"
            android:text="@string/failed"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/sen_regular"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textSize="14sp"

            />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/sen_regular"
            android:text="@string/marks"
            android:textColor="@color/blue"
            android:textSize="28sp"

            />


        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sen_regular"
            android:text="@string/review"
            android:textColor="@color/black"
            android:textSize="14sp"


            />

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="54dp"
            android:layout_below="@+id/text4"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="34dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                app:cardBackgroundColor="@color/button_blue"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_marginLeft="58dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sen_bold"
                    android:text="@string/close"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>


    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
