<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="@dimen/dimen_16"
        android:layout_height="@dimen/dimen_16"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:src="@drawable/ic_arrow_left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_12"
        android:layout_marginTop="@dimen/dimen_12"
        android:layout_toRightOf="@id/back_button"
        android:fontFamily="@font/sen_bold"
        android:text="Quiz Details"
        android:layout_alignBaseline="@+id/back_button"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_text_14" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_button">
        <com.google.android.material.card.MaterialCardView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_24"
            android:layout_marginRight="@dimen/dimen_28"
            android:layout_marginBottom="250dp"
            app:cardBackgroundColor="@color/back2"
            app:cardCornerRadius="@dimen/dimen_12"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.card.MaterialCardView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen_28"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_marginBottom="240dp"
            app:cardCornerRadius="@dimen/dimen_12"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/quizName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/sen_bold"
                    android:text="Basics of java"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_text_18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/clock"
                    android:layout_marginRight="@dimen/dimen_4"
                    android:layout_toLeftOf="@+id/clock"
                    android:fontFamily="@font/sen_bold"
                    android:text="15 min"
                    android:textColor="@color/button_red"
                    android:textSize="@dimen/dimen_20" />

                <ImageView
                    android:id="@+id/clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/quizName"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/clock" />

                <TextView
                    android:id="@+id/dicreption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/quizName"
                    android:layout_alignStart="@+id/quizName"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="@font/sen_regular"
                    android:text="@string/quiz_discreption"
                    android:textColor="@color/light_grey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/rules"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dicreption"
                    android:layout_alignStart="@+id/quizName"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sen_bold"
                    android:text="Rules"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/circles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rules"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <LinearLayout
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:cardCornerRadius="100dp"
                            app:strokeColor="@color/easy"
                            app:strokeWidth="3dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/sen_bold"
                                android:text="15"
                                android:textSize="18sp"
                                android:textColor="@color/easy" />
                        </com.google.android.material.card.MaterialCardView>
                        <TextView
                            android:layout_marginTop="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sen_regular"
                            android:textColor="@color/black"
                            android:text="MCQ's"
                            android:textSize="12sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:cardCornerRadius="100dp"
                            app:strokeColor="@color/dark_green"
                            app:strokeWidth="3dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/sen_bold"
                                android:text="+10"
                                android:textSize="18sp"
                                android:textColor="@color/dark_green" />
                        </com.google.android.material.card.MaterialCardView>
                        <TextView
                            android:layout_marginTop="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sen_regular"
                            android:textColor="@color/black"
                            android:text="Correct"
                            android:textSize="12sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:cardCornerRadius="100dp"
                            app:strokeColor="@color/poppy_red"
                            app:strokeWidth="3dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/sen_bold"
                                android:text="-2"
                                android:textSize="18sp"
                                android:textColor="@color/poppy_red" />
                        </com.google.android.material.card.MaterialCardView>
                        <TextView
                            android:layout_marginTop="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sen_regular"
                            android:textColor="@color/black"
                            android:text="Incorrect"
                            android:textSize="12sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:cardCornerRadius="100dp"
                            app:strokeColor="@color/medium"
                            app:strokeWidth="3dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/sen_bold"
                                android:text="50"
                                android:textSize="18sp"
                                android:textColor="@color/medium" />
                        </com.google.android.material.card.MaterialCardView>
                        <TextView
                            android:layout_marginTop="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sen_regular"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:text="Passing"
                            android:textSize="12sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            app:cardCornerRadius="100dp"
                            app:strokeColor="@color/violet"
                            app:strokeWidth="3dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/sen_bold"
                                android:text="15"
                                android:textSize="18sp"
                                android:textColor="@color/violet" />
                        </com.google.android.material.card.MaterialCardView>
                        <TextView
                            android:layout_marginTop="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sen_regular"
                            android:textColor="@color/black"
                            android:text="Max Score"
                            android:textSize="12sp"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:id="@+id/details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sen_bold"
                    android:textSize="16sp"
                    android:text="Details"
                    android:textColor="@color/black"
                    android:layout_alignStart="@+id/quizName"
                    android:layout_below="@id/circles"/>
                <TextView
                    android:id="@+id/bullet1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/sen_regular"
                    android:textColor="@color/black"
                    android:layout_alignStart="@+id/quizName"
                    android:layout_below="@id/details"
                    android:text="@string/details1"/>
                <TextView
                    android:id="@+id/bullet2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/sen_regular"
                    android:textColor="@color/black"
                    android:layout_alignStart="@+id/quizName"
                    android:layout_below="@id/bullet1"
                    android:text="@string/details2"/>
                <TextView
                    android:id="@+id/bullet3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/sen_regular"
                    android:textColor="@color/black"
                    android:layout_alignStart="@+id/quizName"
                    android:layout_below="@id/bullet2"
                    android:text="@string/details3"/>
                <TextView
                    android:id="@+id/bullet4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/sen_regular"
                    android:textColor="@color/black"
                    android:layout_alignStart="@+id/quizName"
                    android:layout_below="@id/bullet3"
                    android:text="@string/details4"/>
                <TextView
                    android:id="@+id/bullet5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/sen_regular"
                    android:textColor="@color/black"
                    android:layout_alignStart="@+id/quizName"
                    android:layout_below="@id/bullet4"
                    android:text="@string/details5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bullet5"
                    android:text="Tags"
                    android:textColor="@color/black"
                    android:fontFamily="@font/sen_bold"
                    android:textSize="16sp"
                    android:layout_alignStart="@+id/details"
                    android:layout_marginTop="12dp"/>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</RelativeLayout>
